# Projekt

./: .gitignore  .~lock.Projekt_SCZR_2020L.odt#  README.md  a.out  camera_capture  camera_capture.cpp  img_display  img_display.cpp  screenshot  screenshot.cpp  timers.c
interprocess_communication/: a.out  b.out  cos.c  execve.c  fork_pipe.c  fork_wait.c  message_queues.c  my_echo  my_echo.c  posix_spawn.c
interprocess_communication/shared_memory/: pshm_ucase.h  pshm_ucase.h.gch  pshm_ucase_bounce  pshm_ucase_bounce.c  pshm_ucase_send  pshm_ucase_send.c
mq/: CMakeLists.txt  Makefile  README.txt
mq/include/: common.h  pshm.h  structures.h
mq/src/: consumer.cpp  consumer_shared.cpp  display_image.cpp  mq_utils.cpp  producer.cpp  shared_archiver.cpp  shared_consumer.cpp  shared_producer.cpp
mq/visualization/: MQ_vsualization.ipynb  dane_shared.txt
mq/visualization/.ipynb_checkpoints/: MQ_vsualization-checkpoint.ipynb
projekt/: clear.sh  data_processing_client  data_provider  data_provider.cpp  pshm.h
shared_memory/: 1_recive_OTHER.txt  1_send_OTHER.txt  2_send_FIFO.txt  2_send_OTHER.txt  2_send_RR.txt  3_recive_FIFO.txt  3_recive_RR.txt  3_send_FIFO.txt  3_send_RR.txt  4_recive_FIFO.txt  4_recive_OTHER.txt  4_recive_RR.txt  4_send_FIFO.txt  4_send_OTHER.txt  4_send_RR.txt  badanie.txt  clear.sh  data_archiver.cpp  data_processing.cpp  data_provider.cpp  sqrt  sqrt.cpp
system/: .gitignore  Makefile  clear.sh  data_archiver  data_archiver.cpp  data_processing.cpp  data_processing_client.cpp  data_provider.cpp  pshm.h  run_system.sh
tests/forked_ipc_via_queues/: a.out  main.c  test.c
tests/separate_processes_via_sh/: a.c  a.out  all_processes.sh  b.c  b.out  run_all.c  run_all.out
